--- a/resources/lang/fa.json
+++ b/resources/lang/fa.json
@@ -696,6 +696,8 @@
     "Sint Maarten (Dutch part)": "سینت مارتن",
     "size": "اندازه",
     "skype": "اسکایپ",
+    "Slider": "اسلایدر",
+    "Sliders": "اسلایدر ها",
     "Slovakia": "اسلواکی",
     "Slovenia": "اسلوونی",
     "slug": "نامک",
