section and box

--- a/resources/lang/fa.json
+++ b/resources/lang/fa.json
@@ -124,6 +124,8 @@
     "Bosnia and Herzegovina": "بوسنی و هرزگوین",
     "Botswana": "بوتسوانا",
     "Bouvet Island": "جزیره بووه",
+    "Box": "باکس",
+    "Boxes": "باکس ها",
     "Brazil": "برزیل",
     "British Indian Ocean Territory": "قلمرو بریتانیا در اقیانوس هند",
     "Browser Sessions": "جلسات مرورگر",
@@ -567,7 +569,8 @@
     "percent": "درصد",
     "Permanently delete this team.": "حذف کامل این تیم.",
     "Permanently delete your account.": "حذف کامل حساب کاربری.",
-    "Permissions": "مجوز",
+    "Permission": "مجوز",
+    "Permissions": "مجوز ها",
     "Peru": "پرو",
     "Philippines": "فیلیپین",
     "phone": "تلفن",
@@ -666,6 +669,8 @@
     "Scroll to top": "پیمایش به بالا",
     "Search": "جستجو",
     "second": "ثانیه",
+    "Section": "سکشن",
+    "Sections": "سکشن ها",
     "Select": "انتخاب",
     "Select a different plan": "یک طرح دیگر انتخاب کنید",
     "Select a log file...": "یک فایل لاگ انتخاب کنید ...",
