--- a/resources/lang/fa.json
+++ b/resources/lang/fa.json
@@ -592,6 +592,8 @@
     "Poland": "لهستان",
     "Portugal": "پرتغال",
     "position": "جایگاه",
+    "Post": "پست",
+    "posts": "پست ها",
     "Press / to search": "دکمه / را برای جستجو بزنید",
     "Preview": "پیش نمایش",
     "Previewing": "پیش نمایش",
