--- a/resources/lang/fa.json
+++ b/resources/lang/fa.json
@@ -738,6 +738,9 @@
     "Submit": "ثبت",
     "Subscribe": "مشترک شوید",
     "Subscription Information": "اطلاعات اشتراک",
+    "Subscription payment": "پرداخت",
+    "SubscriptionPayment":"پرداخت",
+    "subscription_payments":"پرداخت ها",
     "Subscription Pending": "اشتراک در انتظار",
     "Sudan": "سودان",
     "Suriname": "سورینام",
